--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "check": "yarn prettier . --check && yarn lint && vue-tsc --noEmit",
+    "dev": "vite",
+    "format": "yarn prettier --write .",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,9 +16,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.20.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "prettier": "3.4.2",
     "typescript": "~5.7.2",
+    "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
   },
