--- a/package.json
+++ b/package.json
@@ -1,35 +1,49 @@
 {
   "name": "elttools",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
-    "build": "vue-tsc -b && vite build",
-    "check": "yarn prettier . --check && yarn lint && vue-tsc --noEmit",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "build-only": "vite build",
     "deploy": "rsync -av --delete dist/ $DEPLOY_DEST",
     "dev": "vite",
     "format": "yarn prettier --write .",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --fix",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@mdi/font": "7.4.47",
+    "core-js": "^3.37.1",
     "lodash": "^4.17.21",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "roboto-fontface": "*",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.14.0",
+    "@tsconfig/node22": "^22.0.0",
     "@types/lodash": "^4",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.20.0",
-    "eslint-plugin-vue": "^9.32.0",
-    "globals": "^15.14.0",
-    "prettier": "3.4.2",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.23.0",
-    "vite": "^6.1.0",
-    "vue-tsc": "^2.2.0"
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-vue": "^9.30.0",
+    "npm-run-all2": "^7.0.1",
+    "prettier": "3.5.0",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
+    "typescript": "~5.6.3",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.4.10",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0",
+    "vue-tsc": "^2.1.10"
   },
   "packageManager": "yarn@4.6.0"
 }
