Added component for items in the tool list.

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine on
-RewriteCond "%{REQUEST_URI}" !(index.html|assets/*)
-RewriteRule "^/(.*)$" "/index.html"
+RewriteBase /tools/
+RewriteCond "%{REQUEST_URI}" !(index\.html|assets/*)
+RewriteRule . index\.html
