--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "classnames": "^2.5.1",
     "core-js": "^3.37.1",
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
