--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
     "lodash": "^4.17.21",
+    "micromark": "^4.0.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
