--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "roboto-fontface": "*",
     "shim-keyboard-event-key": "^1.0.3",
     "vue": "^3.4.31",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
